Convert all javascript code into typescript.
