# src/error/internal-server-error.js
@@ -1,11 +1,0 @@
-export class InternalServerError extends Error {
-
-  constructor(message, code) {
-    super(message)
-    this.code = code
-    this.status = 500
-    this.statusText = 'Internal server error'
-    Error.captureStackTrace(this, InternalServerError)
-  }
-
-}
